Resources Section spacing fix and Testimonial Functionality added.

--- a/css/main.css
+++ b/css/main.css
@@ -449,7 +449,7 @@ p {
 /* Resource Cards */
 .resources-section {
     background: #bf2026;
-    padding: 0 0 0 12%;
+    padding: 5% 0 5% 12%;
     overflow-x: hidden;
 }
 
